# cognition

./: .env  README.md  keyboard_control.py  main.py  pyproject.toml  slam.py  test_image.py  webot_connect.py
devices/: camera.py  compass.py  encoder.py  lidar.py  motor.py
mapping/: graph_omg.py  graph_slam.py  graph_slam_session.py  icp.py  kinematics.py
navigation/: astar.py
utils/: image.py  robot.py
