[project]
name = "cognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "webbot>=0.34",
]

[tool.basedpyright]
extraPaths = ["/usr/local/webots/lib/controller/python"]
